# QuantTrade

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backlog/: HOOKS_INSTALL.md  INDEX.json  SCHEMA.md  commit_sync.py  db.py  lint.py  migrate.py  schema.py  session_audit.py
configs/: equity_d1.yaml  equity_m3_cusum_cs.yaml  equity_m3_cusum_cs_v2.yaml  equity_m3_cusum_cs_v2_h10.yaml  equity_m3_cusum_cs_v2_h10_od.yaml  equity_m3_d1.yaml  equity_m3_d1_cs.yaml  equity_m3_etf_d1.yaml  equity_m3w_cusum_cs_v2.yaml  friction.yaml  multi_d1.yaml  multi_h4.yaml  universe_equity_m3.yaml  universe_equity_m3w.yaml  xau_d1.yaml  xau_d1_22y_correct_geometry.yaml
ideas/: INDEX.json  SCHEMA.md  db.py  lint.py  migrate.py  schema.py
phase5/: __init__.py  asset_registry.py  audit_audit.py  audit_null_distribution.py  devils_advocate_dispatch.py  lookahead_lint.py  orchestrate.py  proposal.py  regime_stats.py  run_proposal.py  sensitivity_grid.py
pipeline/: alpha_eval.py  alpha_ops.py  alphas_101.py  best_model.py  cli_console.py  cointegration.py  consensus_ensemble.py  cot_features.py  cross_asset.py  cross_section.py  data.py  data_sanity.py  deployment.py  earnings_events.py  equity_source.py  equity_universe.py  feature_importance.py  features.py  frac_features.py  friction.py  funding_features.py  insider_events.py  labels.py  leadlag.py  macro_fetch.py  macro_fetch_intraday.py  metrics.py  microstructure.py  otr.py  pairs_spread.py  pooled_walk_forward.py  primary_contracts.py  primary_screening.py  regimes.py  registry.py  reporting.py  sample_weights.py  sentiment_features.py  session_filter.py  sizing.py  (+8 more)
scripts/: analyze_threshold_transferability.py  backtest_survival_book.py  build_all_regimes.py  build_nvda_dossier.ps1  compare_pooled_vs_per_asset.py  fetch_earnings_dates.py  fetch_equity_daily.py  fetch_insider_form4.py  ingest_gld_volume.py  loop_a_tick.py  migrate_loop_a_state_v2.py  report_long_short_split.py  run_multi_h4.py  run_pooled_equity_d1.py  run_xau_d1.py
signals/: trial_ledger.json
tests/: conftest.py  test_alpha_eval.py  test_alpha_ops.py  test_alphas_101.py  test_alt_data_gdelt_tone.py  test_alt_data_gld_holdings.py  test_alt_data_polymarket.py  test_asset_registry_equity.py  test_b0079_feature_overrides.py  test_benchmark_correlations.py  test_best_model_selector.py  test_bollinger_meanrev.py  test_calibration_no_leak.py  (+76 more)
(+353 files in other folders)
